salesforce/9.5/modules/ROOT/pages/index.adoc
= Salesforce Connector v9.5 - Mule 4
:page-aliases: connectors::salesforce/salesforce-connector-95.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Salesforce Connector v9.5

Anypoint Connector for Salesforce (Salesforce Connector) enables you to create applications that react to Salesforce events such as adding, changing, or deleting objects, topics, documents, and channels.

Salesforce Connector enables you to connect to the Salesforce APIs. This connector exposes methods for accessing Salesforce, including working with the https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_dev_process_chapter.htm[Salesforce Apex classes].

This connector works with the Salesforce SOAP API, REST API, Bulk API, and Streaming API, depending on the operation you configure. Each API call uses an XML request and response over an HTTPS connection. All required request headers, error handling, and HTTPS connection configurations are built into the connector.

Release Notes: xref:release-notes::connector/salesforce-connector-release-notes-mule-4.adoc[Salesforce Connector Release Notes] +
Exchange: https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-salesforce-connector/[Salesforce Connector]

== About Connectors

Anypoint Connectors are Mule runtime engine (Mule) extensions that enable you to connect to APIs and resources on external systems, such as Salesforce, ServiceNow, and Twitter.

== Before You Begin

Before creating an app, you must have access to the Salesforce target resource and Anypoint Platform. You must also understand how to create a Mule app using Design Center or Anypoint Studio, and be familiar with Salesforce, HTTP, SOAP, REST, Bulk and Streaming APIs, Mule runtime engine (Mule), Anypoint Connectors, Anypoint Studio (Studio), Mule concepts, elements in a Mule flow, and Global Elements.

Requirements for using the connector:

* https://developer.salesforce.com[Salesforce developer account]
* https://help.salesforce.com/articleView?id=user_security_token.htm[Salesforce security token]
+
You can receive a new security token by email if you run *Reset Security Token* through *My Personal Information* from the Salesforce Setup pages.
* Consumer key and Secret (available in your Salesforce developer account)
+
Required if you are using the OAuth API.
* Namespace and schema location
+
If you plan to create the XML for your Mule app, you need to include the correct namespace and schema location in your XML file. Anypoint Studio adds this information to the XML file automatically when you add the Salesforce connector to a flow in a Mule app.

Restrictions:

* The Salesforce connector does not expose all possible operations of the Salesforce APIs.
* The Salesforce connector does not provide access to the Chatter API or the Tooling API.

== POM File Information

[source,xml,linenums]
----
<dependency>
  <groupId>com.mulesoft.connectors</groupId>
  <artifactId>mule-salesforce-connector</artifactId>
  <version>x.x.x</version>
  <classifier>mule-plugin</classifier>
</dependency>
----

Replace `x.x.x` with the version that corresponds to the connector you are using.

To obtain the most up-to-date `pom.xml` file information, access the connector in https://www.mulesoft.com/exchange/[Anypoint Exchange] and click *Dependency Snippets*.

== Salesforce Templates and Examples

=== Templates

https://www.mulesoft.com/exchange/?search=salesforce&type=template[Anypoint Exchange templates] provide starting points for Anypoint Studio projects such as:

* Account Broadcast template: https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc.wday.sap.db-account-broadcast/[Salesforce to Salesforce, Workday, SAP, and Database]
* Aggregation:
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-contact-aggregation/[contact]
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-opportunity-aggregation/[opportunity],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-user-aggregation/[user]
* Bidirectional Sync template:
** Between Salesforce organizations:
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-account-bidirectional-sync/[accounts],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-contact-bidirectional-sync/[contacts],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-casecustomobject-bidirectional-sync/[custom objects],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-opportunity-bidirectional-sync/[opportunities],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-user-bidirectional-sync/[users]
** Other sources:
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2db-account-bidirectional-sync/[Database],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2msdyn-account-bidirectional-sync/[Microsoft Dynamics CRM],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sieb-account-bidirectional-sync/[Siebel]
* Migration: https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sap-account-migration/[accounts],
https://www.mulesoft.com/exchange/org.mule.templates/template-sap2sfdc-contact-migration/[contacts],
https://www.mulesoft.com/exchange/org.mule.templates/template-sfdc2sfdc-opportunity-migration/[opportunities]

=== Examples

https://www.mulesoft.com/exchange/?search=salesforce&type=example[Anypoint Exchange examples] enable you to create complete Anypoint Studio projects such as:

* Batch processing: https://www.mulesoft.com/exchange/org.mule.examples/salesforce-to-MySQL-DB-using-Batch-Processing/[database],
https://www.mulesoft.com/exchange/org.mule.examples/import-leads-into-salesforce/[import leads]
* https://www.mulesoft.com/exchange/org.mule.examples/cache-scope-with-salesforce-contacts/[Contacts]
* https://www.mulesoft.com/exchange/org.mule.examples/salesforce-data-retrieval/[Data retrieval]
* https://www.mulesoft.com/exchange/org.mule.examples/dataweave-with-flowreflookup/[DataWeave]

== Configure with XML

If you are creating Salesforce connector XML, add the namespace for the connector. By contrast, Anypoint Studio creates the namespace for a connector automatically when you create a project for a Mule app.

[source,text,linenums]
----
xsi:schemaLocation="
...
http://www.mulesoft.org/schema/mule/sfdc
http://www.mulesoft.org/schema/mule/sfdc/current/mule-salesforce.xsd"
----

Example:

[source,xml,linenums]
----
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xmlns:sfdc="http://www.mulesoft.org/schema/mule/salesforce"
      xsi:schemaLocation="
               http://www.mulesoft.org/schema/mule/core
               http://www.mulesoft.org/schema/mule/core/current/mule.xsd
               http://www.mulesoft.org/schema/mule/sfdc
               http://www.mulesoft.org/schema/mule/sfdc/current/mule-salesforce.xsd">

      <!-- Insert your configuration elements and your flow here -->
</mule>
----

=== Configure Maven Dependencies

When creating an app manually from the XML, you need to set up the pom.xml file for your project:

[source,xml,linenums]
----
<repositories>
   <repository>
        <id>mule-ee-releases</id>
        <name>MuleEE Releases Repository</name>
        <url>https://repository-master.mulesoft.org/nexus/content/repositories/releases-ee/</url>
    <repository>
        <id>mule-ee-snapshots</id>
        <name>MuleEE Snapshots Repository</name>
        <url>https://repository-master.mulesoft.org/nexus/content/repositories/ci-snapshots/</url>
    </repository>
</repositories>
----

This snippet specifies a project dependency for a specific release version:

[source,xml,linenums]
----
<dependency>
    <groupId>org.mule.connectors</groupId>
    <artifactId>mule-sfdc-connector</artifactId>
    <version>9.5.0</version>
    <classifier>mule-plugin</classifier>
</dependency>
----

This snippet adds specifies a project dependency for the latest version:

[source,xml,linenums]
----
<dependency>
    <groupId>org.mule.modules</groupId>
    <artifactId>mule-sfdc-connector</artifactId>
    <version>x.x.x</version>
</dependency>
----

Replace `x.x.x` with the version that corresponds to the connector you are using.

To obtain the most up-to-date `pom.xml` file information, access the connector in https://www.mulesoft.com/exchange/[Anypoint Exchange] and click *Dependency Snippets*.

== Develop an Application

Build an app in this order:

. Configure the connector.
. Test the connection.
. Build the rest of your flow.
. Add and configure DataWeave.

When developing an app, the Salesforce connector provides these integration patterns
you can use with the Salesforce APIs:

* Batch Data Synchronization - An external system accesses, changes, deletes, or adds data in Salesforce in batches, and vice versa (Salesforce to external system).
* Remote Call-In - An external system accesses, changes, deletes or adds data in Salesforce, and vice versa (Salesforce to external system).
* Fire and Forget Remote Process Invocation - Salesforce initiates a process in a third-party system and receives an acknowledgment that the process has started. The third-party system continues processing independent of Salesforce.
* Request-Reply Remote Process Invocation - Salesforce kicks off a process in a remote system, waits for the remote system to finish processing, then accepts control back again from the remote system.
* User Interface Update Based on Data Changes - The Salesforce UI updates in response to a change in a third-party system.

[[apis]]
== Salesforce APIs

Salesforce Connector works with the Salesforce SOAP API, REST API, Bulk API, and Streaming API, but does not provide access to the Chatter API or the Tooling API. Each API call uses an XML request and response over an HTTPS connection. All required request headers, error handling, and HTTPS connection configurations are built into the connector.

* Apex SOAP API
+
Salesforce https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_api.htm?search_text=soap[Apex SOAP API] exposes Apex class methods as custom SOAP web service calls. This allows an external app to invoke an Apex web service to perform an action in Salesforce.
+
* Apex REST API
+
Salesforce https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_rest.htm[Apex REST API] creates your own REST-based web services using Apex. This API has all of the advantages of the REST architecture, while adding the ability to define custom logic and including automatic argument or object mapping.
+
* Bulk API
+
Salesforce https://developer.salesforce.com/docs/atlas.en-us.api_asynch.meta/api_asynch/asynch_api_intro.htm[Bulk API] quickly and securely loads batches of your organization's data into Salesforce. See also xref:salesforce-connector-config-topics.adoc#batchdata[Load Data in Batches].
+
* Metadata API
+
Salesforce https://developer.salesforce.com/docs/atlas.en-us.api_meta.meta/api_meta/meta_intro.htm[Metadata API] manages customizations and build tools that work with the metadata model, not the data itself.
+
* SOAP API
+
Salesforce https://developer.salesforce.com/docs/atlas.en-us.api.meta/api/sforce_api_quickstart_intro.htm[SOAP API] provides secure access to your organization's information on Salesforce. Most of the operations that Salesforce Connector performs map to this API.
+
All the Salesforce operations performed through the SOAP API have an optional parameter called `Headers` that can take any of the https://developer.salesforce.com/docs/atlas.en-us.api.meta/api/soap_headers.htm[Salesforce SOAP headers].
+
* Streaming API
+
Salesforce https://developer.salesforce.com/docs/atlas.en-us.api_streaming.meta/api_streaming/intro_stream.htm[Streaming API] securely receives notifications for changes to your organization's information in Salesforce. See xref:salesforce-connector-config-topics.adoc#receivedata[Receive Inbound Data From Salesforce] for more information about the use of the Streaming API.

== Configure in Design Center

. In Anypoint Platform > *Design Center*, click *Create* > *Mule Application*.
. In the first Mule Application card, if you want a Salesfore event to initiate access to your app (that is, to trigger your app), choose one of the Salesforce operations. Alternatively, you can use an *HTTP Listener* or *Scheduler* trigger.
+
Salesforce operations:
+
* *On Deleted Object* - Delete an object.
* *On Modified Object* - Modify an object.
* *On New Object* - Create a new object. Possible object types are Contact, Lead, Account, Contracts, Opportunity, and custom objects. The object types correspond to the Salesforce object you want to create, modify, or delete.
* *Replay Channel* - Subscribe to a streaming channel. This trigger provides channel-related notification settings for new events and events stored by Salesforce within the 24-hour retention period. Events that take place in the specified channel trigger the flow.
+
NOTE: A channel or topic must be published to Salesforce before a subscription to the channel can be created.
+
* *Replay Topic* - Subscribe to a topic. This trigger provides topic-related notification settings for new events and events stored by Salesforce within the 24-hour retention period. Events that take place on records in the specified topic trigger the flow.
* *Subscribe Channel* - Subscribe to a streaming channel. This trigger provides channel-related notification settings for new events that take place after you subscribe.
* *Subscribe Topic* - Subscribe to a topic. This trigger provides topic-related notification settings for new events that take place after you subscribe.

== Configure a Salesforce New Object Trigger

The following shows how to configure the Salesforce New Object trigger.

. Create a New Mule Application in Design Center.
. Set the trigger. For example, you can use Salesforce > New Object.
. Click *Set up*.
. Specify the Connection Type:
+
[%header%autowidth.spread]
|===
|Connection Type |Salesforce Information Site
| <<Configure Username Password Authorization, Username Password>> |https://developer.salesforce.com/docs/atlas.en-us.api.meta/api/sforce_api_calls_login.htm[SOAP API Username Password Login]
| <<Configure OAuth v2.0 Authorization, OAuth 2>> |https://help.salesforce.com/articleView?id=remoteaccess_oauth_web_server_flow.htm[OAuth 2.0 Web Server Authentication Flow]
| <<Configure OAuth JWT Authorization, OAuth JWT>> |https://help.salesforce.com/articleView?id=remoteaccess_oauth_jwt_flow.htm[OAuth 2.0 JWT Bearer Token Flow]
| <<Configure OAuth SAML Authorization, OAuth SAML>> |https://help.salesforce.com/apex/HTViewHelpDoc?id=remoteaccess_oauth_SAML_bearer_flow.htm[OAuth 2.0 SAML Bearer Assertion Flow]
| <<Configure OAuth Username Password Authorization, OAuth Username Password>> |https://help.salesforce.com/articleView?id=remoteaccess_oauth_username_password_flow.htm[OAuth 2.0 Username-Password Flow]
|===
+
. Specify the parameters as required for each configuration type, and click
*Test* to ensure you have a valid connection to Salesforce.
. If needed, configure the Apex tab to decide what metadata to fetch, and to
add Apex class names.
. If you haven't specified a Connection Type, and if needed, configure the Advanced tab to set the *Max Idle Time* and *Time Units* for how long to hold open a connection before it expires.
+
After you specify a *Connection Type*, if needed, you can use the *Advanced* tab
to change values for the *Reconnection Strategy*, *Pooling Profile*, and
*Expiration Policy*.
+
. If needed, set the *Redelivery Policy* on the main configuration screen.
Redelivery indicates the maximum number of tries to deliver trigger content.
+
image::salesforce-dc-redelivery-policy.png[Redelivery Policy]

=== Configure Username Password Authorization

Important fields:

* *Username* (required): Enter the Salesforce username.
* *Password* (required): Enter the corresponding password.
* *Security Token*: Enter the corresponding security token.

[NOTE]
Implementing OAuth 2.0-based authentication mechanisms involves extra steps, but may be preferred if your service is exposed to external users, as it ensures better security.

=== Configure OAuth v2.0 Authorization

Important fields:

* *Display* (required): How to optimize the display: `Page` = Full-page authorization screen (default), `Popup` = Compact dialog optimized for modern web browser popup windows, and `Touch` = Mobile-optimized dialog designed for modern smart phones, such as Android and iPhone.
* *Consumer Key* (required): The consumer key for the Salesforce connected app. See https://docs.mulesoft.com/connectors/salesforce/salesforce-connector#create-a-consumer-key[Create a Consumer Key].
* *Consumer Secret* (required): The consumer secret for the connector to access Salesforce.
* *Listener Config* (required): Configuration for the listener, for example, `HTTP_Listener_config`.
* *Callback Path* (required): Path for the callback, for example, `/callback`.
* *Authorize Path* (required): Path for authorization, for example, `/authorize`.
* *External Callback URL*: Callback URL, for example, `+http://localhost:8085/callback+`.

=== Configure OAuth JWT Authorization

Important fields:

* *Consumer Key* (required): The consumer key for the Salesforce connected app. See <<Create a Consumer Key>>.
* *Key Store* (required): The path to the key store used to sign data during authentication. Only Java key store format is allowed. See <<Generate a Keystore File>>.
* *Store Password* (required): The password for the keystore.
* *Principal* (required): The Salesforce username that you want to use.

=== Configure OAuth SAML Authorization

Important fields:

* *Consumer Key* (required): The consumer key for the Salesforce connected app. See <<Create a Consumer Key>>.
* *Key Store* (required): The path to the key store used to sign data during authentication. Only Java key store format is allowed. See <<Generate a Keystore File>>.
* *Store Password* (required): Key store password.
* *Principal* (required): Username of desired Salesforce user.

=== Configure OAuth Username Password Authorization

Important fields:

* *Consumer Key* (required): The consumer key for the Salesforce connected app. See <<Create a Consumer Key>>.
* *Consumer Secret* (required): The consumer secret for the connector to access Salesforce.
* *Username* (required): Enter the Salesforce username.
* *Password* (required): Enter the corresponding password.
* *Security token*: Enter the corresponding security token.

== Install and Configure in Studio

. In Anypoint Studio, click the Exchange icon in the Studio taskbar.
. Click Login in Anypoint Exchange.
. Search for this connector and click Install.
. Follow the prompts to install this connector.


To configure:

. Drag a connector operation to the Studio canvas.
. Click the operation.
. Click the green plus sign to the right of *Connector Configuration*.
. In the Connection field choose one of the following connection types:
+
** <<Username Password>>
** <<OAuth 2.0>>
** <<OAuth JWT>>
** <<OAuth SAML>>
** <<OAuth Username Password>>
+
. For each of connection choices, you can set optional proxy values:
+
** *Host* - Host name of the proxy server.
** *Port* - The port number the proxy server runs on.
** *Username* - The username to log in to the server.
** *Password* - The corresponding password.

After setting the *Global Element Properties* screen, return to the main connector menu and set the <<Connector Property Values>>.

=== Username Password

Important fields:

* *Username* (required): Enter the Salesforce username.
* *Password* (required): Enter the corresponding password.
* *Security token*: Enter the corresponding security token.

=== OAuth v2.0

Important fields:

* *Display* (required): How to optimize the display: `PAGE` = Full-page authorization screen (default), `POPUP` = Compact dialog optimized for modern web browser popup windows, and `TOUCH` = Mobile-optimized dialog designed for modern smart phones, such as Android and iPhone.
* *Consumer key* (required): The consumer key for the Salesforce connected app. See <<Create a Consumer Key>>.
* *Consumer secret* (required): The consumer secret for the connector to access Salesforce.
* *Listener config* (required): Configuration for the listener, for example, `HTTP_Listener_config`.
* *Callback path* (required): Path for the callback, for example, `/callback`.
* *Authorize path* (required): Path for authorization, for example, `/authorize`.
* *External callback url*: Callback URL, for example, `+http://localhost:8085/callback+`.

=== OAuth JWT

Important fields:

* *Consumer key* (required): The consumer key for the Salesforce connected app. See <<Create a Consumer Key>>.
* *Key store* (required): See <<Generate a Keystore File>>.
* *Store password* (required): The password for the keystore.
* *Principal* (required): The password for the keystore.

=== OAuth SAML

Important fields:

* *Consumer key* (required): The consumer key for the Salesforce connected app. See <<Create a Consumer Key>>.
* *Key store* (required): See <<Generate a Keystore File>>.
* *Store password* (required): The password for the keystore.
* *Principal* (required) The password for the keystore.

=== OAuth Username and Password

Important fields:

* *Consumer key* (required): The consumer key for the Salesforce connected app. See <<Create a Consumer Key>>.
* *Consumer secret* (required): The consumer secret for the connector to access Salesforce.
* *Username* (required): Enter the Salesforce username.
* *Password* (required): Enter the corresponding password.
* *Security token*: Enter the corresponding security token.

=== Connector Property Values

The following are four example operations of the many you can set for the Salesforce connector.
These are the important fields for these example operations:

Create:

* *Type*: Salesforce object type.
* *Records*: xref:design-center::custom-expression-field.adoc[Function editor expression].

Query:

* *Salesforce query*: Salesforce query to retrieve objects.
* *Parameters*: Values for placeholders in the salesforce query.

Update:

* *Type*:  Salesforce object type.
* *Records*: xref:design-center::custom-expression-field.adoc[Function editor expression] to produce a collection of Salesforce objects to be updated.

Delete:

* *Records To Delete Ids*: xref:design-center::custom-expression-field.adoc[Function editor expression] to produce a collection of Salesforce objects to be deleted.

=== Keeping a Session Alive

For the Mule 4 Salesforce Connector, for all the configurations except OAuth v2, you have the option to keep the session alive until it expires by setting the *Disable session invalidation* field.

The Mule app controls the lifecycle connections. When the app determines that a given connection is not needed anymore, it checks the setting of Disable Session Invalidation. When the setting is False (the default), the connector automatically destroys the connection for the session. To prevent a session from closing in this case, you can set the Disable Session Invalidation field to True or provide a function expression.

Salesforce uses the same session for all your threads, so for example, if your session is active and you log in again, Salesforce uses the existing session instead of creating a new one.

If the *Disable session invalidation* field is set to False, the connector automatically destroys the session after it's no longer needed.

You should keep the session alive when you are working with threads or concurrency in general. Salesforce uses the same session for all your threads (for example, if you have an active session and you log in again, Salesforce uses the existing session instead of creating a new one). To make sure the connection doesn't close when a thread is finished, you should set the *Disable session invalidation* field to True in the Connection section of the connector's global element properties.

image::salesforce-disable-session.png[Disable Session Field]

=== Set Apex and Proxy

The Invoke Apex REST and Invoke Apex Soap methods work with Apex Class Name settings. When you connect to Salesforce, the Salesforce connector gets the names of the Apex classes and methods belonging to them that can be invoked.

All Salesforce connection configurations support these Apex settings:

* *Fetch All Apex SOAP Metadata* - Fetches the metadata of all the Apex SOAP classes. Takes precedence over Apex Class Name settings.
* *Fetch All Apex REST Metadata* - Fetches the metadata of all the all Apex REST classes. Takes precedence over Apex Class Name settings.
* *Apex Class Name* - List of Apex class names to use for limiting the set of classes you fetch along with the methods they expose. This setting can speed the fetch process if there are a lot of classes that you do not need to fetch.

You can set Apex and Proxy settings in Design Center and in Anypoint Studio 7.

Configure the Apex and Proxy Settings:

Apex Settings values:

* *Fetch All Apex SOAP Metadata* - Fetches the metadata of all the Apex SOAP classes.
* *Fetch All Apex REST Metadata* - Fetches the metadata of all the all Apex REST classes.

Apex Class Name:

* *None* - No Apex class name is mentioned for DataSense to acquire.
* *From Message* - Lets you specify the class name from a MEL expression.
* *Create Object manually* - A user creates a list and adds class names to the list - only those classes and their methods are acquired by DataSense.
+
[NOTE]
The *Fetch All Apex SOAP Metadata* and *Fetch All Apex REST Metadata* check boxes take precedence over the Apex Class Name settings. If these boxes are selected, they fetch all the Apex SOAP metadata or Apex REST metadata regardless of your selection in the Apex Class Names section.

Proxy Settings values:

* *Host* - Host name of the proxy server.
* *Port* - The port number the proxy server runs on.
* *Username* - The username to log in to the server.
* *Password* - The corresponding password.

After configuring, click OK.

In the Mule Palette, choose a Salesforce connector operation.

== Create a Consumer Key

A consumer key is required when setting up OAuth 2.0 configurations for the Salesforce connector. It is used by the OAuth 2.0 JWT and SAML bearer configurations and by the OAuth 2.0 Username Password configuration.

This procedure provides guidance on using Salesforce to create a consumer key. It explains how to create a connected app in Salesforce. However, note that the steps might differ somewhat in your Salesforce instance

Prerequisite:

This procedure assumes that you already have a certification file (such as `salesforce-cert.crt`). If not, you can produce one by generating a Java KeyStore and Public Key.

[[create-consumer-key]]
. Log into Salesforce, and go to Setup > Build > Create > Apps.
. Under the Connected App section, click New.
. Follow these steps to create a new connected app, and enter the following information in the appropriate fields:
+
* A name for the connected app.
* The API name.
* Contact email.
+
. Under API (Enable OAuth Settings), select Enable OAuth Settings:
+
* Enter the Callback URL.
* Select the Use Digital Signatures checkbox.
* Click Browse (or Choose File), and load your Salesforce certificate (for example, `salesforce-cert.crt`), which contains your public key.
+
In Studio, you typically store this in the workspace that contains your Mule app.
+
. Add and Save these OAuth scopes to Selected OAuth Scopes:
+
Full Access (`full`) and Perform Requests On Your Behalf At Any Time (`refresh_token`, `offline_access`)
+
. Configure the Authorization Settings for the app:
+
Click Manage. Then under the OAuth Policies section, expand the Permitted Users dropdown, and select Admin Approved Users are Pre-Authorized. Then Save.
. Under the Profiles section, click Manage Profiles.
. Select your user profile, and then click Save.
. Go back to the list of Connected Apps: Build > Create > Apps.
. Under the Connected Apps section, select the connected app you created.

You can see the Consumer Key that you need to provide in your connector's configuration.

== Generate a Keystore File

The Keystore is the path to the keystore used to sign data during authentication. Only Java keystore format is allowed.

To generate a keystore file:

. Go to your Mule workspace, and open the command prompt (for Windows) or Terminal (for Mac).
. Type `keytool -genkeypair -alias salesforce-cert -keyalg RSA -keystore salesforce-cert.jks` and press enter.
. Enter the following:
+
** Password for the keystore.
** Your first name and last name.
** Your organization unit.
** Name of your city, state, and the two letters code of your county.
+
The system generates a java keystore file containing a private or public key pair in your workspace.
+
. Provide the file path for the Keystore in your connector configuration.
+
Type `keytool -exportcert -alias salesforce-cert -file salesforce-cert.crt -keystore salesforce-cert.jks` and press enter.
+
The system now exports the public key from the keystore into the workspace. This is the public key that you need to enter in your Salesforce instance.
+
. Make sure that you have both the keystore (salesforce-cert.jks) and the public key (salesforce-cert.crt) files in your workspace.

== Handle Events and Topics

Your app can receive events by subscribing to a Salesforce topic.

Each event that travels through your flows contains information about the Salesforce data that has changed, how it changes, and when. The connector parses this information and sends you information that a flow can work with.

Inbound properties of events:

* `payload`
* `createdDate`
* `replayId`

Salesforce stores events for 24 hours, so you can retrieve stored events during that retention window. A subscriber (to a topic or channel) can retrieve events at any time and is not restricted to listening to events at the time they are sent.

Each broadcast event is assigned a numeric ID. IDs are incremented and not guaranteed to be contiguous for consecutive events. Each ID is guaranteed to be higher than the ID of the previous event. For example, the event following the event with ID 999 can have an ID of 1,025. The ID is unique for the organization and the channel. The IDs of deleted events are not reused.

See also <<Receive Inbound Data From Salesforce>> for event processing when streaming data to an app from Salesforce.

Topics:

* <<Receive Events for a Topic>>
* <<Subscribe Topic>>
* <<Replay Topic>>
* <<Receive Custom Event Notifications>>

=== Receive Events for a Topic

Before you can receive events for Salesforce changes that are associated with a topic, you must first create a topic (a PushTopic). A PushTopic is a special object in Salesforce that binds a name (the topic's name) and Salesforce Object Query Language (SOQL) query together. Once a PushTopic is created, you can subscribe to it by using its name.

In Design Center, you can either use the Create (`create`) or Publish Topic (`publish-topic`) operations to create a topic. Example of the required fields for these operations:

* *Topic Name*: `AccountUpdates`
* *Query*: `SELECT Id, Name FROM Account`

Example in XML for `publish-topic`:

`<sfdc:publish-topic name="AccountUpdates" query="SELECT Id, Name FROM Account"/>`

Alternatively, in Salesforce you might create a topic by executing code like this from an Enter Apex Code window, accessible through your system logs:

[source,text,linenums]
----
PushTopic pushTopic = new PushTopic();
pushTopic.ApiVersion = 23.0;
pushTopic.Name = 'AllAccounts';
pushTopic.Description = 'All records for the Account object';
pushTopic.Query = 'SELECT Id, Name FROM Account';
insert pushTopic;
System.debug('Created new PushTopic: '+ pushTopic.Id);
----

== Subscribe Topic

After you create a topic, you can start receiving events by subscribing to the topic. To do so, you add the Subscribe Topic (`subscribe-topic`) or a Replay Topic (`replay-topic`) trigger to your flow. The trigger acts as an inbound endpoint. Every time the subscription receives an event, the trigger executes the rest of the flow in your Mule app. In the case of the XML example below, it prints a message to the log at INFO level.

In Design Center, you use Subscribe Topic or Replay Topic operations for the Salesforce connector as the trigger.

In XML, you use `subscribe-topic` or `replay-topic` as the trigger:

[source,xml,linenums]
----
<flow name="accountUpdatesSubscription">
    <!-- INBOUND ENDPOINT -->
    <sfdc:subscribe-topic topic="AccountUpdates"/>
    <!-- REST OF YOUR FLOW -->
    <logger level="INFO" message="Received an event for Salesforce Object ID #[map-payload:Id]"/>
</flow>
----

NOTE: When subscribing to a topic that was not previously published in Salesforce, the subscription is successful. When the topic is later published, the user who is already subscribed to it does not receive notifications regarding that topic. The user has to resubscribe after the topic creates.

=== Replay Topic

A subscriber can specify which events to receive, such as all events within the retention window or those that start after a particular event. The default is to receive only new events sent after subscribing. Events outside the 24-hour retention period are discarded.

The Replay Topic provides these options:

[%header%autowidth.spread]
|===
|Design Center Option | XML Value |Description
| `All` | `ALL` | Subscriber receives all events, including past events that are within the 24-hour retention period and new events sent after subscription.
| `Only New` | `ONLY_NEW` | Subscriber receives new events that are broadcast after the client subscribes.
| `From Replay Id` | `FROM_REPLAY_ID` | Subscriber receives all events after the specified event `replayId`.
|===

In Studio, the *Resume from the Last Replay Id* check box lets you specify an automatic replay of stored events, based on the Replay ID of the last event processed by the connector. This functionality can be useful in cases when the connector stopped listening for some reason, such as a server shutdown or dropped connection. If the stored Replay ID is outside the 24-hour retention period, your replay option determines what events to replay.

In this XML example, the Replay Topic acts like an inbound endpoint for the Logger message:

[source,xml,linenums]
----
<flow name="accountUpdatesReplay">
    <!-- INBOUND ENDPOINT -->
    <sfdc:replay-topic topic="AccountUpdates" replayId="1" replayOption="ALL" autoReplay="true"/>
    <!-- REST OF YOUR FLOW -->
    <logger level="INFO" message="Replayed events: #[payload]"/>
</flow>
----

If the `ALL` or `ONLY_NEW` replay option is selected, then the `replayId` value is ignored.

=== Receive Custom Event Notifications

The Salesforce connector provides two operations that are useful for getting custom event notifications. These notifications pertain to general events that are not tied to Salesforce data changes.

. Create a streaming channel with the `Publish Streaming Channel` operation.
+
A `StreamingChannel` is a special Salesforce object that represents a channel used for notifying listeners of generic Streaming API events.
+
Note that you can also create a streaming channel through the Salesforce or through Workbench.
+
. Subscribe to the channel through the Subscribe Channel operation.
+
The Salesforce connector converts the custom events in your streaming channel to Mule events and dispatches them to your flows.

== Push Data to Salesforce

Use as an outbound connector in your flow to push data to Salesforce. To use the connector in this capacity, simply place the connector in your flow at any point after an inbound endpoint.

== Receive Inbound Data From Salesforce

You can use the Salesforce connector as an inbound connector without wrapping the connector in a poll scope to stream data from Salesforce into your app. To use the connector in this capacity, place a Salesforce connector at the start of your flow.

[NOTE]
Studio automatically converts the connector to Salesforce (Streaming) mode. Technically, this is still the same connector, but it accesses the Salesforce Streaming API meaning that the only operation the converted connector can perform is Subscribe to topic (that is, subscribe to PushTopic).

image::salesforce-studio-subscribe-streaming-channel.png[subscribe streaming channel]

Salesforce connector: Listens to notifications on a topic and feeds the data into the flow.

See also: https://developer.salesforce.com/docs/atlas.en-us.api_streaming.meta/api_streaming/intro_stream.htm[Streaming API]

Streaming channels provide notifications to subscribers that are not limited to record-based events. You can use the Salesforce Connector to work with Salesforce streaming channels.

=== Create a Streaming Channel to Receive Data From Salesforce

You must have the proper Streaming API permissions enabled in your organization.

. Log into your Salesforce Developer Edition organization.
. Under All Tabs (+), select Streaming Channels.
. On the Streaming Channels tab, select New to create a new Streaming Channel.
. Enter /u/notifications/ExampleUserChannel in Streaming Channel Name, and an optional description.

You can either use the create operation or the exclusive publish-streaming-channel operation as follows:

[source,xml]
----
<sfdc:publish-streaming-channel name="/u/Notifications" description="General notifications"/>
----

=== Subscribe to a Streaming Channel

After you create a streaming channel, you can start receiving events by subscribing to the channel. The `subscribe-streaming-channel` acts like an inbound endpoint and is used as follows:

[source,xml,linenums]
----
<flow name="notificationsChannelSubscription">
	<!-- INBOUND ENDPOINT -->
	<sfdc:subscribe-streaming-channel streamingChannel="/u/TestStreaming"/>
	<!-- REST OF YOUR FLOW -->
	<logger level="INFO" message="Received an event: #[payload]"/>
</flow>
----

A Mule flow is divided in two. The first portion is usually an inbound endpoint (or an HTTP connector) and a message source. The Mule flow is an entity that receives and generates events that later are processed by the rest of the flow. The other portion is a collection of message processors that processes the messages (also known as events) that are received and generated by the inbound endpoint.

Every time a subscription to `/u/TestStreaming` receives an event, it executes the rest of the flow. In the case of this example it prints a message to the log at INFO level.

=== Stream Channel Inbound Properties

This information gets passed along as inbound properties:

* `channel` - Maps to the Channel JSON property
* `type` - Maps to the Type JSON property in data
* `createdDate` - Maps to the createdDate JSON property in data

Except for `channel`, each property inside an event is available as an `INBOUND` property.

=== Replay Events from a Streaming Channel

A streaming channel can replay notifications, much like topic replay.

The `replay-streaming-channel` acts like an inbound endpoint and can be used like this:

[source,xml,linenums]
----
<flow name="flowStreamingChannelReplay">
    <!-- INBOUND ENDPOINT -->
    <sfdc:replay-streaming-channel streamingChannel="/u/Notifications" replayId="1" replayOption="ALL"/>
    <!-- REST OF YOUR FLOW -->
    <logger level="INFO" message="Replayed events: #[payload]"/>
</flow>
----

If the `ALL` or `ONLY_NEW` replay options are selected, then the `replayId` value is ignored.

=== Push Events to a Streaming Channel

Salesforce lets you push custom events to a specific streaming channel through the REST API. You can use the Salesforce https://workbench.developerforce.com/about.php[Workbench] or this connector.

To use `push-generic-event` operation:

[source,xml,linenums]
----
<flow name="flowPushGenericEvent">
    <!-- INBOUND ENDPOINT -->
    <sfdc:push-generic-event channelId="0M6j0000000KyjBCAS">
    	<sfdc:events>
            <sfdc:event payload="Notification message text"/>
        </sfdc:events>
	</sfdc:push-generic-event>
    <logger level="INFO" message="Replayed events: #[payload]"/>
</flow>
----

The channel ID can be retrieved from the response map of the publish-streaming-channel operation.

Another way of retrieving the ID of the channel is from the Salesforce page, as follows:

. Log into your Developer Edition organization.
. Under All Tabs (+), select Streaming Channels.

If the channel ID field is not visible on the channel list, then:

. Click *Create New View*.
. Type a name for the view in the *Name* input field.
. In the *Available Fields* list, select *Streaming Channel ID*, and click *Add*.
. Add any other fields you want.
. Click *Save*.

Now you should see the channel ID for each streaming channel in the list.

The JSON output received as a response from the push event operation looks something like:

[source,text,linenums]
----
[
	{
	"userOnlineStatus": {
	},
	"fanoutCount": 0
	}
]
----

== Load Data in Batches

The Salesforce Bulk API loads batches of your organization's data into Salesforce.

The Salesforce connector provides the Create and Create Bulk operations for working
with the Bulk API.

For all bulk operations, Salesforce handles the creation process in the background, so the connector does not reply with a collection of SaveResults because it does not have them yet. Instead, the connector replies with a BatchInfo object, which contains the ID of the batch and the ID of the job it creates to upload those objects.

=== Track the Status of Bulk Data

You can monitor a Bulk API batch in Salesforce through the *Job ID* for the *Bulk Data Load Jobs*.

The job detail page in Salesforce includes a related list of all the batches for the job. The related list provides View Request and View Response links for each batch. If a batch is a CSV file, the links return the request or response in CSV format. If a batch is an XML file, the links return the request or response in XML format.

In Salesforce, you can track the status of bulk data load jobs and their associated batches:

. Click YOUR_NAME > *Setup* > *Monitoring* > *Bulk Data Load Jobs*.
. Click the *Job ID* to view the job detail page.

The job detail page includes a related list of all the batches for the job. The related list provides View Request and View Response links for each batch. If the batch is a CSV file, the links return the request or response in CSV format. If the batch is an XML file, the links return the request or response in XML format. These links are available for batches created in Salesforce API version 19.0 and later.

== Object Store Usage

Both Salesforce Connector and Mule use an object store to persist data for features such as automatic message replay and message redelivery:

* A Mule app that runs on-premises uses Mule Object Store, which has no transaction limits.

* A Mule app with a CloudHub deployment uses Object Store v2.
+
The free version of Object Store v2 has a limit of 10 transactions per second.

For more information about object store versions, see https://docs.mulesoft.com/object-store/#object-store-notes[Object Store Notes].

=== Replay Topic and Replay Channel Listener Operations

The Replay topic and Replay channel listener operations have the option to continue from the last replay ID they received before restarting the application.

Salesforce Connector uses an object store for these operations:

* When a Mule app starts for the first time, the connector creates an object store that saves the replay ID.
* For each message that comes through a topic or streaming channel to which the connector is subscribed, the connector updates the latest processed replay ID in the object store.
+
This update process uses up to six transactions.
+
* Each time the application restarts, the connector deletes the expired replay IDs in the object store. A replay ID is expired if it was saved more than 24 hours before the cleanup execution.
+
This cleanup task uses three transactions on the object store for each topic and channel used in the application.

=== Get Updated Objects Operation

The Get updated objects operation retrieves the list of records that were updated between the last time this operation was called and the current server timestamp:

* On the first use of this operation, the connector creates an object store and saves the current server timestamp.
* On subsequent uses of this operation, the connector reads the timestamp from the object store. It updates the value of the object store after it receives the API response to the operation.

Each use of the Get updated object operation performs two transactions to interact with the object store.

=== OAuth 2.0 Connection Type

When configuring an OAuth 2.0 connection, you can specify an object store that stores each resource owner's ID data. If you don't specify an object store, Mule automatically provisions the default object store.

The app interacts with the object store automatically when a new resource owner is authenticated, the access token is refreshed, or the access token is invalidated.

=== Message Redelivery for Input Sources

You can configure a redelivery policy for input sources by setting the number of redelivery attempts to try after an initial failure. You can specify an object store for this policy. If you don't specify an object store, Mule creates a non-persistent object store.

Based on the number of retries configured for the
redelivery policy, The number of transactions used to interact with the object store varies based on the number of retries configured for the redelivery policy.

For more information about configuring a redelivery policy, see xref:mule-runtime::redelivery-policy.adoc[Redelivery policy].

== Usage Notes

=== Fields To Null

* The configurations have a checkbox called *Can Clear Fields by Updating Field Value to Null*. If checked, all the fields in a request that have a null value are added to the `fieldsToNull` field and sent to Salesforce.

* You can decide which fields to set to null without being required to use the `fieldsToNull` field.

=== Upsert

* Unless you configure the External ID Field Name for the sObject to which you are trying to upsert, every use of the upsert fails.
* The upsert operation does not work with the sObject `priceBookentry2`.
* While you can't change the contentType for a bulk upsert, you can use the Create Job operation to set the `contentType` to either `CSV` or `zipped CSV` (if you're getting close to the character limit). Follow up with the Create Batch operation.

=== Query

* Even though you can see the fields of an sObject and their corresponding types via DataSense, the Query operation returns all fields as `String`.

* If you want to use the actual type of the field, you must convert that field to the desired type using a Transform (or Transform Message) component.

* Although `CreatedDate` field appears as `dateTime`, the query returns a `String` representing the date.

* To actually use the field as a `dateTime`, you can configure it using Transform Message, like in the example.

* To store `Date` and `DateTime` fields, you can use DataWeave expressions to create a date and calendar Java objects.

=== Insert values into a Salesforce Drop-down

* Be aware that inserting dependent values into an existing drop-down list field in Salesforce does not always work. Test to confirm functionality.

=== Evaluate Values in a Salesforce Drop-down

* If you are evaluating against a value in an existing drop-down list field in Salesforce, be sure to use the exact value in the dropdown. For example, if you use the value `US` to evaluate against the contents of a drop-down list that contains the value `USA`, the evaluation works, but you end up with two values in the dropdown: one for `US` and one for `USA`.

=== Currency

* Currency values cannot exceed 18 characters in length.
* When working with multiple currencies, be aware of which currency your sObject uses so that you avoid inaccurate entries. The default currency matches the location at the organization level.

=== Limits on API Calls

* You need to know the rate limiting policy that applies to your account so that you do not exceed the number of allotted API calls per day.

=== Opportunity Object

When extracting data from an `Opportunity`, be aware that a "quarter" is not relative to a calendar year. A "quarter" in this context is relative to the financial year of the organization.

== Example: Accept and Transform Data

image::salesforce-outbound.png[sfdc_outbound]

* HTTP connector: Accepts data from HTTP requests.
* Transform Message: Transforms data structure and format to produce the output Salesforce connector expects.
* Salesforce connector: (Outbound) Connects with Salesforce and performs an operation to push data to Salesforce.

=== Inbound Scenario

image::salesforce-inbound.png[query_inbound]

. Scheduler connector: Triggers flow according to configuration.
. Salesforce connector: Connects with Salesforce, and returns an InputStream with the query results.
. Transform Message: Transforms data structure and format to produce output the File endpoint expects.
. File connector: Records data in a file, such as a CSV and saves it to a user-defined directory or location.

=== Example: XML

Paste this XML code into Anypoint Studio to experiment with the two flows described in the previous section.

[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:file="http://www.mulesoft.org/schema/mule/file"
xmlns:salesforce="http://www.mulesoft.org/schema/mule/salesforce"
	xmlns:ee="http://www.mulesoft.org/schema/mule/ee/core"
	xmlns:http="http://www.mulesoft.org/schema/mule/http"
	xmlns="http://www.mulesoft.org/schema/mule/core"
	xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core
	http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http
http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/ee/core
http://www.mulesoft.org/schema/mule/ee/core/current/mule-ee.xsd
http://www.mulesoft.org/schema/mule/salesforce
http://www.mulesoft.org/schema/mule/salesforce/current/mule-salesforce.xsd
http://www.mulesoft.org/schema/mule/file
http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd">
	<configuration-properties file="mule-app.properties"/>
	<http:listener-config name="HTTP_Listener_config" doc:name="HTTP Listener config" >
	<http:listener-connection host="localhost" port="8081" />
	</http:listener-config>
	<salesforce:sfdc-config name="Salesforce_Sfdc_config" doc:name="Salesforce Sfdc config">
	  <salesforce:basic-connection
	  username="${salesforce.username}"
	  password="${salesforce.password}"
	  securityToken="${salesforce.securityToken}" />
	</salesforce:sfdc-config>
	<flow name="crud_app_template">
		<http:listener config-ref="HTTP_Listener_config" path="/" doc:name="Listener" />
		<parse-template location="form.html" doc:name="Parse Template"  />
	</flow>
	<flow name="create_accountFlow" >
		<http:listener config-ref="HTTP_Listener_config" path="/createAccount" doc:name="Listener"  />
		<ee:transform doc:name="Transform Message" >
			<ee:message >
				<ee:set-payload ><![CDATA[%dw 2.0
output application/java
---
[{

	Name: payload.Name,
	AccountNumber: payload.AccountNumber,
	BillingCity: payload.BillingCity
}]]]></ee:set-payload>
			</ee:message>
		</ee:transform>
		<salesforce:create doc:name="Create" type="Account" config-ref="Salesforce_Sfdc_config"/>
		<ee:transform doc:name="Transform Message" >
			<ee:message >
				<ee:set-payload ><![CDATA[%dw 2.0
output application/json
---
payload map {
	id:$.id,
	errors:$.errors,
	success:$.success

}]]></ee:set-payload>
			</ee:message>
		</ee:transform>
	</flow>
	<flow name="delete_accountFlow" >
		<http:listener config-ref="HTTP_Listener_config" path="/delete" doc:name="Listener"  />
		<ee:transform doc:name="Transform Message" >
			<ee:message >
				<ee:set-payload ><![CDATA[%dw 2.0
output application/java
---
[payload.Id]]]></ee:set-payload>
			</ee:message>
		</ee:transform>
		<salesforce:delete config-ref="Salesforce_Sfdc_config" doc:name="Delete" />
		<ee:transform doc:name="Transform Message" >
			<ee:message >
				<ee:set-payload ><![CDATA[%dw 2.0
output application/json
---
payload map {
	id:$.id,
	errors:$.errors,
	success:$.success
}]]></ee:set-payload>
			</ee:message>
		</ee:transform>
	</flow>
	<flow name="query_accountFlow" >
		<http:listener config-ref="HTTP_Listener_config" path="/query" doc:name="Listener"  />
		<salesforce:query config-ref="Salesforce_Sfdc_config" doc:name="Query" >
			<salesforce:salesforce-query>SELECT AccountNumber,BillingAddress,Id,Name FROM Account WHERE Name = ':name'</salesforce:salesforce-query>
			<salesforce:parameters ><![CDATA[#[output application/java
---
{
	name : payload.name
}]]]></salesforce:parameters>
		</salesforce:query>
		<ee:transform doc:name="Transform Message"  >
			<ee:message >
				<ee:set-payload ><![CDATA[%dw 2.0
output application/json
---
payload map {
		AccountNumber:$.AccountNumber,
		BillingAddress:$.BillingAddress,
		Id:$.Id,
		Name:$.Name
}]]></ee:set-payload>
			</ee:message>
		</ee:transform>
	</flow>
	<flow name="update_accountFlow" >
		<http:listener config-ref="HTTP_Listener_config" path="/update" doc:name="Listener"  />
		<ee:transform doc:name="Transform Message"  >
			<ee:message >
				<ee:set-payload ><![CDATA[%dw 2.0
output application/java
---
[{

	Name: payload.Name,
	AccountNumber: payload.AccountNumber,
	Id:payload.Id
}]]]></ee:set-payload>
			</ee:message>
		</ee:transform>
		<salesforce:update config-ref="Salesforce_Sfdc_config" type="Account" doc:name="Update"  />
		<ee:transform doc:name="Transform Message" >
			<ee:message >
				<ee:set-payload ><![CDATA[%dw 2.0
output application/json
---
payload map {
	id:$.id,
	errors:$.errors,
	success:$.success
}]]></ee:set-payload>
			</ee:message>
		</ee:transform>
	</flow>
	<flow name="upsert_accountFlow" >
		<http:listener config-ref="HTTP_Listener_config" path="/upsert" doc:name="Listener" />
		<ee:transform doc:name="Transform Message" >
			<ee:message >
				<ee:set-payload ><![CDATA[%dw 2.0
output application/java
---
[{

	Name: payload.Name,
	AccountNumber: payload.AccountNumber,
	Id:payload.Id
}]]]></ee:set-payload>
			</ee:message>
		</ee:transform>
		<salesforce:upsert config-ref="Salesforce_Sfdc_config"
		externalIdFieldName="Id" type="Account" doc:name="Upsert" />
		<ee:transform doc:name="Transform Message" >
			<ee:message >
				<ee:set-payload ><![CDATA[%dw 2.0
output application/json
---
payload map {
	id:$.id,
	errors:$.errors,
	success:$.success,
	created:$.created

	}]]></ee:set-payload>
			</ee:message>
		</ee:transform>
	</flow>
	<flow name="find_duplicates_for_account_flow" >
		<http:listener config-ref="HTTP_Listener_config" path="/findDuplicates" doc:name="Listener" />
		<ee:transform doc:name="Transform Message" >
			<ee:message >
				<ee:set-payload ><![CDATA[%dw 2.0
output application/java
---
[
	payload
]]]></ee:set-payload>
			</ee:message>
		</ee:transform>
		<salesforce:find-duplicates config-ref="Salesforce_Sfdc_config" type="Account"
		doc:name="Find duplicates" />
		<ee:transform doc:name="Transform Message" >
			<ee:message >
				<ee:set-payload ><![CDATA[%dw 2.0
output application/json
---
{
	success: payload.success,
	duplicateResults: {
		(payload.duplicateResults map {
			matchRecords: $.matchResults
		}
		)
	},
	duplicateRuleEntityType: payload.duplicateRuleEntityType,
	duplicateRule: payload.duplicateRule,
	allowSave: payload.allowSave,
	errorMessage: payload.errorMessage
}]]></ee:set-payload>
			</ee:message>
		</ee:transform>
	</flow>
	<flow name="crud-appFlow" >
		<http:listener doc:name="Listener" config-ref="HTTP_Listener_config" path="/"/>
		<salesforce:convert-lead doc:name="Convert lead" config-ref="Salesforce_Sfdc_config"/>
	</flow>
</mule>
----

== Example: Create or Update Objects With Parent Child Relationships

Salesforce objects can have relationships between them that can be standard or custom created types.

The relationships between the objects are usually one-to-many parent child relationships,
but can be any link between two objects residing in Salesforce.

Creating or altering objects with relationships is challenging. This section shows how to perform an upsert for an object using the Salesforce connector.

Create a structure in Salesforce for this relationship.

This example assumes two custom types: `MyCustomObject` and `MyOtherCustomObject`

MyCustomObject must hold a relationship to a `MyOtherCustomObject`. When upserting a `MyCustomObject`, the POJO sent as input to the Salesforce connector looks like this:

[source,json,linenums]
----
{
	...
	// MyCustomObject's fields ...
	OtherObject__r:
	{
		CustomField__c : 'ABC123',
		type: 'MyOtherCustomObject__c'
	}
}
----

OtherObject is the name of `MyCustomObject` field whose value must be a reference to a `MyOtherCustomObject` object. `OtherObject__r` indicates the name of the field that is set and that its a relationship to another object.

The value of this field must be an object with two fields.

A field named type with the referenced object type name as value. In this case a custom `MyOtherCustomObject` type.

A field with value and name appropriate to identify the right instance
of `MyOtherCustomObject` to reference. In this case is the one with a value of `ABC123` for the field named `CustomField`.

The following XML example shows how to update these objects:

[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:metadata="http://www.mulesoft.org/schema/mule/metadata"
    xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking"
    xmlns:dw="http://www.mulesoft.org/schema/mule/ee/dw"
    xmlns:sfdc="http://www.mulesoft.org/schema/mule/sfdc"
    xmlns="http://www.mulesoft.org/schema/mule/core"
    xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:spring="http://www.springframework.org/schema/beans"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.springframework.org/schema/beans
    http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/sfdc
http://www.mulesoft.org/schema/mule/sfdc/current/mule-sfdc.xsd
http://www.mulesoft.org/schema/mule/ee/dw
http://www.mulesoft.org/schema/mule/ee/dw/current/dw.xsd
http://www.mulesoft.org/schema/mule/core
http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/ee/tracking
http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd">
    <sfdc:config name="Salesforce__Basic_Authentication"
        username="username"
        password="password"
        securityToken="token"
        url="https://test.salesforce.com/services/Soap/u/34.0"
        doc:name="Salesforce: Basic Authentication"/>
    <flow name="DirectUpsert" initialState="stopped">
        <poll doc:name="Poll">
            <fixed-frequency-scheduler frequency="10000" startDelay="5000"/>
            <set-payload
                value="#[ [ ['Name' :'test'+server.dateTime, 'field_1__c' : 'test', 'OtherObject__r' : ['CustomField__c' : 'customFieldValue', 'type': 'MyOtherCustomObject__c'] ] ] ]"
                doc:name="Set Payload"/>
        </poll>

<sfdc:upsert config-ref="Salesforce__Basic_Authentication" externalIdFieldName="Id"
    type="MyCustomObject__c" doc:name="Salesforce">
<sfdc:objects ref="#[payload]"/>
</sfdc:upsert>
        <logger message="Upsert completed!" level="INFO" doc:name="Logger"/>
    </flow>
    <flow name="TransformBefore" initialState="stopped">
        <poll doc:name="Poll">
            <fixed-frequency-scheduler frequency="10000" startDelay="5000"/>
            <set-payload
                value="#[ {'name' :&quot;Paul&quot;, 'customData' : 'JULY 11TH', 'parentRef':  'Carlos' } ]"
                doc:name="Set Payload"/>
        </poll>
        <dw:transform-message metadata:id="7f3eb56a-b4ee-49db-8722-8b303c1c8e7a"
            doc:name="Transform Message">
            <dw:input-payload doc:sample="Input.dwl"/>
            <dw:set-payload><![CDATA[%dw 1.0
%output application/java
---
[{
	Name: payload.name,
	field_1__c: payload.customData,
	OtherObject__r: {'CustomField__c' : payload.parentRef, 'type': 'MyOtherCustomObject__c'}
}]]]></dw:set-payload>
        </dw:transform-message>
        <sfdc:upsert config-ref="Salesforce__Basic_Authentication"
            externalIdFieldName="Id" type="MyCustomObject__c" doc:name="Salesforce">
            <sfdc:objects ref="#[payload]"/>
        </sfdc:upsert>
        <logger message="#[payload[0].created ? &quot;Created&quot; : &quot;Updated&quot;]"
         level="INFO" doc:name="Logger"/>
    </flow>
</mule>
----


== See Also

* https://help.mulesoft.com[MuleSoft Help Center]
* Access the https://developer.salesforce.com/docs[Salesforce developer documentation]
